# damascene-python-and-matlab-bindings

./: .gitignore  CMakeLists.txt  Makefile  README.md  common.mk  common_32.mk  common_64.mk
bindings/: damascene.pyx  example.py  gpb.cu  gpb.h  gpb_gpu.m  gpb_gpu.py  gpb_mex.c  setup.py
combine/: Makefile
convert/: Makefile  convert.cu
damascene/: .damascene.cu.swp  damascene.cu
gPb/: Makefile
include/: cutil.h
intervening/: Makefile
localcues/: Makefile  localcues.cu  localcuesmain.cu  parabola.cu  rotate.cu
matlab/: .gpb.cu.swp  .gpb.h.swp  .gpb_mex.c.swp  Makefile  gpb.cu  gpb.h  gpb_gpu.m  gpb_gpu.py  gpb_mex.c  make.m
noReorthog/: Makefile  lanczos.cu  spectralPb.cu
nonmax/: Makefile
postprocess/: Makefile  skeleton.cu
sPb/: Makefile  spectralPb.cu
stencilMatrixMultiply/: Makefile  stencilMVM.cu
textons/: Makefile  filters.cpp  texton.cu  textonFilter.cu
